--- a/pistachio.html
+++ b/pistachio.html
@@ -11,11 +11,11 @@
     <div class="container">
         <h1 class="title">Pistachio</h1>
         <div class="description">
-            Our pistachio ice cream is kind of a niche flavor.
-            It has a mysterious green color, but tastes surprisingly good !
-            We use fresh pistachio nuts for our pistachio ice cream.
+            <p>Our pistachio ice cream is kind of a niche flavor.</p>
+            <p>It has a mysterious green color, but tastes surprisingly good !</p>
+            <p>We use fresh pistachio nuts for our pistachio ice cream.</p>
 
-            Here are some of the countries where our oranges are harvested:
+            <p>Here are some of the countries where our oranges are harvested:</p>
             <ul>
                 <li>Iran</li>
                 <li>United States</li>
@@ -24,11 +24,11 @@
                 <li>Syria</li>
             </ul>
             
-            <img src="">
+            <img src="img/pistachio.jpg">
 
             <!-- I think there is something wrong in this part --> 
 
-            <a hef="index.html"><buttun type="button">Back</button </a>
+            <a hef="index.html"><button type="button">Back</button></a>
 
             <!-- --------------------------------------------- --> 
 
