--- a/pistachio.html
+++ b/pistachio.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1 class="title">Pistachio</h1>
         <div class="description">
-            <p>Our pistachio ice cream is kind of a niche flavor.</p>
+            <p>Your pistachio ice cream is kind of a niche flavor.</p>
             <p>It has a mysterious green color, but tastes surprisingly good !</p>
             <p>We use fresh pistachio nuts for our pistachio ice cream.</p>
 
